<resources>
    <string name="app_name">TimeTable</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="save_button">Сохранить</string>
    <string name="fill_fields">Заполните все поля!</string>
    <string name="title">Преподаватель</string>
    <string name="created_date">Дата и время</string>
    <string name="description">Кабинет</string>
    <string name="time">Корпус</string>
    <string name="select_date">Выберите дату</string>
    <string name="cancel_button">Отмена</string>
    <string name="accept_button">Удалить</string>
    <string name="task_description">Кабинет: %s</string>
    <string name="time_textview">Корпус: %s </string>
    <string name="date_textview">Дата и время: %s</string>
    <string name="item_title_textview">Преподаватель: %s</string>
    <string name="image">Изображение преподавателя</string>
    <string name="image_required">Выберите изображение</string>
    <string name="tasks">Занятия</string>
    <string name="task_info">Информация</string>
    <string name="confirm_delete">Вы действительно хотите удалить это занятие?</string>
    <string name="delete_task">Удаление занятия</string>
</resources>